--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "standard.enable": true,
-  "standard.autoFixOnSave": true,
-  "standard.options": {
-    "parser": "babel-eslint"
-  }
+  "editor.formatOnSave": true
 }
